--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@mui-treasury/styles": "^1.13.1",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.9",
+    "@react-oauth/google": "^0.2.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-font-loader": "^1.1.0",
