--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.1.3",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-google-font-loader": "^1.1.0",
     "react-material-ui-carousel": "^3.4.2",
