--- a/.github/workflows/azure2-webapps-node.yml
+++ b/.github/workflows/azure2-webapps-node.yml
@@ -42,7 +42,7 @@ jobs:
         node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
 
-    - name: npm install --force, build, and test
+    - name: npm install, build, and test
       run: |
         npm install --force
         npm run build --if-present
