--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_STRING=https://transfy-v2-backend.onrender.com/route/register
-REACT_APP_BACKEND_FRIENDS_REQUEST=https://transfy-v2-backend.onrender.com/route/getAllUser
+REACT_APP_BACKEND_STRING=http://localhost:4000/route/register
+REACT_APP_BACKEND_FRIENDS_REQUEST=http://localhost:4000/route/getAllUser
