--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@material-ui/core": "^4.12.4",
     "@mui-treasury/components": "^1.10.1",
     "@mui-treasury/styles": "^1.13.1",
     "@mui/icons-material": "^5.10.6",
@@ -24,6 +25,7 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-swipeable-views": "^0.14.0",
+    "socket.io-client": "^4.5.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
