simple chat added almost head to the next zone

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
-REACT_APP_BACKEND_STRING=http://localhost:4000/route/register
-REACT_APP_BACKEND_FRIENDS_REQUEST=http://localhost:4000/route/getAllUser
-REACT_APP_GetUserMessages=http://localhost:4000/message/getMessage
-REACT_APP_SendMessage=http://localhost:4000/message/sendMessage
-REACT_APP_BACKEND_STRING_OFFICIAL=http://localhost:4000/
+# REACT_APP_BACKEND_STRING=http://localhost:4000/route/register
+# REACT_APP_BACKEND_FRIENDS_REQUEST=http://localhost:4000/route/getAllUser
+# REACT_APP_GetUserMessages=http://localhost:4000/message/getMessage
+# REACT_APP_SendMessage=http://localhost:4000/message/sendMessage
+# REACT_APP_BACKEND_STRING_OFFICIAL=http://localhost:4000/
 
-# REACT_APP_BACKEND_STRING=https://transfy-v2-backend.onrender.com/route/register
-# REACT_APP_BACKEND_FRIENDS_REQUEST=https://transfy-v2-backend.onrender.com/route/getAllUser
-# REACT_APP_GetUserMessages=https://transfy-v2-backend.onrender.com/message/getMessage
-# REACT_APP_SendMessage=https://transfy-v2-backend.onrender.com/message/sendMessage
-# REACT_APP_BACKEND_STRING_OFFICIAL=https://transfy-v2-backend.onrender.com/
+REACT_APP_BACKEND_STRING=https://transfy-v2-backend.onrender.com/route/register
+REACT_APP_BACKEND_FRIENDS_REQUEST=https://transfy-v2-backend.onrender.com/route/getAllUser
+REACT_APP_GetUserMessages=https://transfy-v2-backend.onrender.com/message/getMessage
+REACT_APP_SendMessage=https://transfy-v2-backend.onrender.com/message/sendMessage
+REACT_APP_BACKEND_STRING_OFFICIAL=https://transfy-v2-backend.onrender.com/
